--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div>
+    <a href="https://youtu.be/YykjpeuMNEk?si=B14CRNj9QNYnIr_E" target="_blank">My current favourite song is Coldplay-Hymn for the wekend</a>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
